--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="home-container container grid">
                 <div class="home-data">
                     <h1 class="home-title">
-                        OUR WORLD
+                        For the love of Color
                     </h1>
                     <p class="home-description">
                         We would like to welcome you into our colourful world, go and find your perfect beanie.
@@ -446,10 +446,10 @@
                         </h3>
                         <ul class="footer-links">
                             <li>
-                                <a class="footer-link" href="#" target="_blank">Instagram</a>
+                                <a class="footer-link" href="https://www.instagram.com/lebonnetamsterdam/" target="_blank">Instagram</a>
                             </li>
                             <li>
-                                <a class="footer-link" href="#" target="_blank">Facebook</a>
+                                <a class="footer-link" href="https://www.facebook.com/lebonnetamsterdam/" target="_blank">Facebook</a>
                             </li>
                         </ul>
                     </div>
@@ -457,7 +457,7 @@
             </div>
 
             <div class="footer-info container">
-                <span class="footer-copyright">&copy; All rights reserved</span>
+                <span class="footer-copyright">All rights reserved &copy; 2022</span>
                 <div class="footer-privacy policy">
                     <a href="#" target="_blank">Terms & Agreements</a>
                     <a href="#" target="_blank">Privacy Policy</a>
