--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             </div>
 
             <div class="footer-info container">
-                <span class="footer-copyright">All rights reserved &copy; 2022</span>
+                <span class="footer-copyright">Website by Salome Mosiava | &copy; 2022 All rights reserved</span>
                 <div class="footer-privacy policy">
                     <a href="#" target="_blank">Terms & Agreements</a>
                     <a href="#" target="_blank">Privacy Policy</a>
